# BATTLEBOT_ROS2

./: README.md  package.xml  setup.cfg  setup.py  spinner battlebot
battlebot_sim/: damage_calculator_node.py  dual_teleop.py  moving_obstacle_controller.py  saw_blade_controller.py  spin_saw.py
battlebot_spinner/: package.xml  setup.cfg  setup.py  weapon_controller.py
battlebot_spinner/launch/: spawn_spinner_bot.launch.py
battlebot_spinner/models/spinner_bot/: model.config  model.sdf
battlebot_spinner/urdf/: spinner_bot.xacro
battlebot_spinner/worlds/: battlebot_arena.world
config/: params.yaml
launch/: spawn_battlebot.launch.py
models/saw_blade/: model.sdf  model.sdfros2.save
models/saw_blade/meshes/: Sawblade.dae
models/saw_blade_1/: model.config  model.sdf
models/saw_blade_2/: model.config  model.sdf
urdf/: battlebot.urdf  battlebot_1.urdf  battlebot_2.urdf  debug_bot.urdf
worlds/: arena.world
변경사항/: battlebot_1.urdf  battlebot_2.urdf  dual_teleop.py  setup.py  spawn_battlebot.launch.py
