<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>battlebot_spinner</name>
  <version>0.0.0</version>
  <description>red blade Battlebot</description>
  <maintainer email="gustjr3332@gmail.com">gustjr3332</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  
  <exec_depend>roslaunch</exec_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>joy</depend>
  <export>

    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="$BATTLEBOT_PROJECT/src/battlebot_spinner/models"/>
    <gazebo_ros gazebo_world_path="$BATTLEBOT_PROJECT/src/battlebot_spinner/worlds"/>
 </export>
</package>

